--- a/package.json
+++ b/package.json
@@ -3,16 +3,23 @@
   "version": "0.0.0",
   "private": false,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-session": "^1.11.3",
+    "knex": "^0.8.6",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "nodemon": "~1.5.1"
+    "mysql": "^2.9.0",
+    "nodemon": "~1.5.1",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^3.9.0",
+    "serve-favicon": "~2.3.0"
   }
 }
