--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.0",
   "private": false,
   "scripts": {
+    "postinstall": "bower install",
+
+    "prestart": "npm install",
+
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
